Bug 499398 - Cannot add a new calendar, no feedback as to why
Summary: Cannot add a new calendar, no feedback as to why
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.24.5
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-01 20:22 UTC by Christopher Mohr
Modified: 2025-03-08 14:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christopher Mohr 2025-02-01 20:22:06 UTC
SUMMARY
When I attempt to add a new calendar, the app does not give feedback whether the calendar was added or not. When it is not added, there is no error message stating why it failed, so I have nothing to go on when trying to solve the problem. 


STEPS TO REPRODUCE
1. Move mouse pointer to lower left box on screen with "Birthdays & Anniversaries" and "Personal Calendar" options showing.
2. Right click within that box to bring up a menu and choose "Add Calendar..."
3. Enter the name of a new calendar, then click OK. 
4. No new calendar item appears in the list with "Birthdays & Anniversaries" and "Personal Calendar" options.
5. No error message appears about the failed attempt to add a new calendar. Is it a permissions issue? Is the name of the calendar reserved or invalid? Am I using a freeware version that does not allow the addition of new calendars? Does the app have problems in Ubuntu 24? I'm flying blind here. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Allen Winter 2025-02-01 20:38:10 UTC
the "Add Calendar..." option should bring up a dialog where you can choose which type of calendar to add (DAV, Google, ETCSync, etc)

If not, I have no idea what might be wrong.
You do seem to be using a pretty old version
Comment 2 Bug Janitor Service 2025-03-07 17:25:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/akonadi/-/merge_requests/234
Comment 3 Allen Winter 2025-03-08 13:54:26 UTC
Git commit 08c083ad49cffa89fa0b4304a8aaa46b3b14c565 by Allen Winter.
Committed on 08/03/2025 at 12:03.
Pushed by winterz into branch 'master'.

agenttypedialog.cpp - UI improvements

Improve the UI:
 - if no resource type is selected then disable the Ok button
 - add a lineedit placeholder to indicate this is not the name
   of the account to add, but rather that this is a search line.

M  +6    -0    src/widgets/agenttypedialog.cpp

https://invent.kde.org/pim/akonadi/-/commit/08c083ad49cffa89fa0b4304a8aaa46b3b14c565