agenttypedialog.cpp - UI improvements

Improve the UI:
 - if no resource type is selected then disable the Ok button
 - add a lineedit placeholder to indicate this is not the name
   of the account to add, but rather that this is a search line.

BUG: 499398